# stm32l4x2-flashloader

./: Cargo.toml  README.md  build.rs  device.x  link.x  memory.x
.cargo/: config
src/: main.rs
