[package]
name = "stm32l4x2_flashloader"
version = "0.1.0"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
edition = "2018"

[dependencies]
panic-never  = "0.1.0"
#panic-halt   = "0.2.0"

[dependencies.stm32l4xx-hal]
# version = "0.5.0"
# path = "../../stm32l4xx-hal"
git = "https://github.com/korken89/stm32l4xx-hal"
branch = "master"
features = ["stm32l4x2"]

#[lib]
#name = "stm32l4x2_flashloader"
#crate-type = ["staticlib"]

[profile.release]
opt-level = 2       # optimize for size
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
